# cursor_class

./: .cursorrules  DATABASE_SETUP.md  README.md  architecture.md  calculator.py  db_health.py  db_health_enhanced.py  demo_queries.py  docker-compose.yml  graphql_health.py  plan.md  pyproject.toml  requirements.txt  setup_database.py  step_0_demo.md  step_1_demo.md  step_2_demo.md  step_3_demo.md  step_4_demo.md  step_5_demo.md  step_6_demo.md  step_7_demo.md  test_calculator.py  track_tables.py  user_manager.py
backend/: __init__.py  main.py  tasks.py
commons/: __init__.py  logger.py  utils.py
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.jsx
scripts/: name_formatter.py
tests/: test_tasks.py
